@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Etablissement {
- nom : string
- slug : slug
- description : text
- numeroTel : string
- adressePostale : string
- ville : ville
- adresseMail : string
- image : string
- actif : bool
- accueil : bool
- createdAt : date
- updateAt : date
- categorie : array
}

class Ville {
- nom : string
- codePostal : int
- nomDepartement : string
- numeroDepartement : int
- nomRegion : string
}

class Categorie {
- nom : string
- createdAt : date
}

class Utilisateur {
- prenom : string
- nom : string
- pseudo : string
- mail : string
- motDePasse : string
- createdAt : date
- updateAt : date
- roles : array
- actif : bool
}


Etablissement "0..*"--"1..*" Categorie
Etablissement "0..*"--"1..1" Ville
Etablissement "0..*"--"0..*" Utilisateur



@enduml